--- a/hajimeyo/assessment/assessment.html
+++ b/hajimeyo/assessment/assessment.html
@@ -10,6 +10,7 @@
     <p>診断したい名前を入れてください</p>
     <input type="text" id="user-name" size="40" maxlength="20">
     <button id="assessment">診断する</button>
+    <div id="assessmentArea"></div>
     <script src="assessment.js"></script>
   </body>
 </html>
